--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,12 @@
 {% extends 'layout.html' %}
 
 
-{% block content %}
+{% block mainpage %}
+
+<div class = "wrapper">
 
 
+</div>
 
-{% endblock content %}
+
+{% endblock mainpage %}
